# jsonschema-to-typeddict

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: python.yml
src/jsonschema_to_typeddict/: __init__.py  __main__.py  converter.py
tests/: sample_schema.json  sample_schema.pyi  test_convert.py
