[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jsonschema_to_typeddict"
authors = [{name = "Henrique Gemignani Passos Lima", email = "henrique@gemignani.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/henriquegemignani/jsonschema-to-typeddict"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "C4",
    "RSE",
    "TCH",
    "PTH",
    "COM818", "COM819",
    "ISC",
    "PIE",

    "PLC",
    "PLE",
    "PLR",
    "PLW",
]
extend-ignore = [
    "ISC001",  # conflicts with formatter
    "PLR0913",  # Too many arguments for function
]

[tool.ruff.lint.isort]
# This is very desirable, but causes issues with py-cord and some usages of construct_pack.encode
# required-imports = ["from __future__ import annotations"]

[tool.mypy]
files = ["src"]